ingress-examples/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: 2019-10-16T05:47:27Z
  generation: 1
  name: ingress-wear-watch
  namespace: app-space
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 8080
        path: /wear
      - backend:
          serviceName: video-service
          servicePort: 8080
        path: /watch
      - backend:
          serviceName: video-service
          servicePort: 8080
        path: /stream
      - backend:
          serviceName: food-service
          servicePort: 8080
        path: /eat
status:
  loadBalancer:
    ingress:
    - {}
